Adding a seeder for Posts

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7444,7 +7444,8 @@ button.bg-dark:focus {
           justify-content: flex-end !important;
 }
 
-.justify-content-center {
+.justify-content-center,
+.pagination {
   -webkit-box-pack: center !important;
       -ms-flex-pack: center !important;
           justify-content: center !important;
